--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: cmake (>= 2.8.12~),
                extra-cmake-modules (>= 1.3.0~),
                kdoctools-dev,
                kio-dev,
+               libkf5configwidgets-dev,
                libkf5i18n-dev,
                libkf5iconthemes-dev,
                libkf5xmlgui-dev,
