--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Sune Vuorela <sune@debian.org>,
            Fathi Boudra <fabo@debian.org>,
            Modestas Vainius <modax@debian.org>,
            Eshat Cakar <info@eshat.de>,
-           Maximiliano Curia <maxy@debian.org>
+           Maximiliano Curia <maxy@debian.org>,
 Build-Depends: cmake (>= 2.8.12~),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.3.0~),
@@ -17,7 +17,7 @@ Build-Depends: cmake (>= 2.8.12~),
                libkf5iconthemes-dev,
                libkf5xmlgui-dev,
                pkg-kde-tools (>= 0.12),
-               qtbase5-dev (>= 5.4)
+               qtbase5-dev (>= 5.4),
 Standards-Version: 3.9.8
 Homepage: http://www.kde.org/
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/kcron.git
@@ -26,7 +26,7 @@ Vcs-Git: https://anonscm.debian.org/git/pkg-kde/applications/kcron.git
 Package: kcron
 Section: oldlibs
 Architecture: all
-Priority: extra
+Priority: optional
 Depends: kde-config-cron, ${misc:Depends}
 Description: program scheduler frontend - transitional package
  This package helps migrating from the kcron standalone app to the KDE
