--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,8 @@ Uploaders: Sune Vuorela <sune@debian.org>,
 Build-Depends: cmake (>= 2.8.12~),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.3.0~),
-               kdoctools-dev,
-               kio-dev,
+               likf5doctools-dev,
+               libkf5kio-dev,
                libkf5configwidgets-dev,
                libkf5i18n-dev,
                libkf5iconthemes-dev,
