--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Build-Depends: cmake (>= 2.8.12~),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.3.0~),
                libkf5configwidgets-dev,
+               libkf5doctools-dev,
                libkf5i18n-dev,
                libkf5iconthemes-dev,
                libkf5kio-dev,
