--- a/debian/control
+++ b/debian/control
@@ -27,8 +27,8 @@ Section: admin
 Architecture: any
 Depends: cron | anacron, ${misc:Depends}, ${shlibs:Depends}
 Suggests: khelpcenter
-Breaks: kcron (<< 4:4.4), ${kde-l10n:all}
-Replaces: kcron (<< 4:4.4), ${kde-l10n:all}
+Breaks: ${kde-l10n:all}
+Replaces: ${kde-l10n:all}
 Description: program scheduler frontend
  kde-config-cron is a KDE configuration module for scheduling programs to run
  at specific intervals using cron, the UNIX scheduling service.
